# Snatchr

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs
src/handlers/: downloader.rs  mod.rs
src/routes/: download.rs  files.rs  health.rs  mod.rs  page.rs
src/utils/: cleanup.rs  mod.rs  youtube.rs
