[package]
name = "snatchr"
version = "0.1.68"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "json"] }
dotenvy = "0.15.7"
sanitize-filename = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
uuid = { version = "1.17", features = ["v4"] }
yt-dlp = { git = "https://github.com/sshcrack/yt-dlp", branch = "develop" }
