[package]
name = "snatchr"
version = "0.2.5"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros", "json"] }
dotenvy = "0.15.7"
regex = "1.12.3"
sanitize-filename = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7.18"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
urlencoding = "2.1.3"
uuid = { version = "1.23", features = ["v4"] }
yt-dlp = { git = "https://github.com/Valhalla-Development/yt-dlp", branch = "develop" }

